--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -218,6 +218,13 @@ table tr:nth-child(even) {
     margin-bottom: 10px;
 }
 
+.image-limited {
+    max-width: 30%; /* Ancho máximo de 300px */
+    height: auto; /* Mantiene las proporciones */
+    display: block; /* Asegura que se comporte como bloque */
+    margin: 10px auto; /* Centra la imagen */
+}
+
 #dear-man .container {
     display: flex; /* Activa Flexbox */
     align-items: center; /* Alinea los elementos verticalmente */
@@ -236,6 +243,26 @@ table tr:nth-child(even) {
     max-width: 40%; /* Limita el tamaño máximo de la imagen */
     height: auto; /* Mantiene la proporción de la imagen */
     align-self: center; /* Alinea la imagen verticalmente al centro */
+}
+
+#tipos-amor .content {
+    display: flex; /* Activa Flexbox */
+    align-items: center; /* Alinea verticalmente los elementos */
+    gap: 20px; /* Espaciado entre la lista y la imagen */
+    justify-content: space-between; /* Espaciado entre elementos */
+}
+
+#tipos-amor ul {
+    flex: 1; /* La lista ocupará el espacio necesario */
+    list-style-type: none; /* Sin viñetas */
+    padding: 0; /* Sin espaciado interno */
+}
+
+#tipos-amor .list-image {
+    flex: 1; /* La imagen ocupará el espacio restante */
+    max-width: 20%; /* Ajusta el tamaño máximo de la imagen */
+    height: auto; /* Mantén las proporciones */
+    margin-right: 20%;
 }
 
 .img {
